--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=student-service
 server.port=8082
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://vrk7xcrab1wsx4r1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pd0tr6v4018a7vlm?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://arfo8ynm6olw6vpn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/c63gpuvve63szrep?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=ee1r0f9bgujh83n6
-spring.datasource.password=ab98sd6aby7ppp1s
+spring.datasource.username=buarksx8y7beez4t
+spring.datasource.password=cs5epym4cj0u7f0h
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
